--- a/ado/env/global.yml
+++ b/ado/env/global.yml
@@ -16,3 +16,4 @@ variables:
   terraformWebAppDirectoryName: webApp
   webAppProjectName: AppServicePerf
   webAppSolutionName: AppServicePerf
+  adoAgentPoolName: ephemeralpool
