--- a/ado/azure-pipeline-webApp.yml
+++ b/ado/azure-pipeline-webApp.yml
@@ -45,6 +45,12 @@ stages:
           value: ${{ variables.devAppServiceSubnetName }} 
         - name: TF_VAR_VNETNAME
           value: ${{ variables.devvNetName }} 
+        - name: TF_VAR_CENTRALRESOURCEGROUPNAME
+          value: ${{ variables.centralResourceGroupName }}
+        - name: TF_VAR_CENTRALVNETNAME
+          value: ${{ variables.centralvNetName }}
+        - name: TF_VAR_ADOAGENTSUBNETNAME
+          value: ${{ variables.centralAdoAgentSubnetName }}
         - name: ARM_SUBSCRIPTION_ID
           value: ${{ variables.subscriptionId }}
         - name: ARM_TENANT_ID
