--- a/ado/env/central.yml
+++ b/ado/env/central.yml
@@ -1,5 +1,5 @@
 variables:
   centralEnvironmentName: central
   centralResourceGroupName: rg-appServicePerf-USSC-central
-  centralvNetName: vnet-appServicePerf-USSC-central
+  centralvNetName: vnet-central
   centralAdoAgentSubnetName: adoAgentSubnet
