--- a/ado/env/global.yml
+++ b/ado/env/global.yml
@@ -16,4 +16,5 @@ variables:
   terraformWebAppDirectoryName: webApp
   webAppProjectName: AppServicePerf
   webAppSolutionName: AppServicePerf
+  webAppSQLMigrationScriptDirectoryName: SQL
   adoAgentPoolName: ephemeralpool
