--- a/ado/deploySQL.yml
+++ b/ado/deploySQL.yml
@@ -1,6 +1,7 @@
 parameters:
   - name: migrationScriptPath
   - name: password
+  - name: pathToAdoScriptDirectory
   - name: sqlDatabaseName
   - name: sqlServerName
   - name: username
@@ -10,6 +11,6 @@ steps:
     displayName: Execution SQL migration scripts
     inputs:
       targetType: filePath
-      filePath: deploySqlModels.sh
+      filePath: ${{ parameters.pathToAdoScriptDirectory }}/deploySqlModels.sh
       arguments: -s ${{ parameters.sqlServerName }} -d ${{ parameters.sqlDatabaseName }} -u ${{ parameters.username }} -p ${{ parameters.password }} -m "${{ parameters.migrationScriptPath }}/SQL"
       failOnStderr: true
