--- a/ado/deploySQL.yml
+++ b/ado/deploySQL.yml
@@ -12,5 +12,5 @@ steps:
     inputs:
       targetType: filePath
       filePath: ${{ parameters.pathToAdoScriptDirectory }}/deploySqlModels.sh
-      arguments: -s ${{ parameters.sqlServerName }} -d ${{ parameters.sqlDatabaseName }} -u ${{ parameters.username }} -p ${{ parameters.password }} -m "${{ parameters.migrationScriptPath }}"
+      arguments: -s ${{ parameters.sqlServerName }} -d ${{ parameters.sqlDatabaseName }} -u ${{ parameters.username }} -p ${{ parameters.password }} -m ${{ parameters.migrationScriptPath }}
       failOnStderr: true
